product_docs/docs/pem/8.0/pem_inst_guide_windows/02_pem_hardware_software_requirements.mdx
---
title: "PEM - Hardware and Software Requirements"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-enterprise-manager/installation-getting-started/windows-installation-guide/8.0/pem_hardware_software_requirements.html"
  - "/edb-docs/d/edb-postgres-enterprise-manager/installation-getting-started/windows-installation-guide/latest/pem_hardware_software_requirements.html"
---

## Hardware Prerequisites

For optimum performance when monitoring servers and rendering dashboards, we recommend installing PEM on a system with at least:

-   4 CPU cores
-   8 GB of RAM
-   100 GB of Storage

Additional disk space is required for data storage. Please note that resource usage will vary based on which probes are defined and enabled, and the activity level on the monitored databases. Monitoring server resources (as you use PEM) will let you know when you need to expand your initial system configuration.

## Software Prerequisites

**Supported Platforms and Versions**

For information about the platforms and versions supported by PEM, visit the EnterpriseDB website at:

<https://www.enterprisedb.com/services-support/edb-supported-products-and-platforms#pem>

**Modifying the pg_hba.conf File**

The `pg_hba.conf` file manages connections for the Postgres server. You must ensure that the `pg_hba.conf` file on each monitored server allows connections from the PEM server, the monitoring PEM agent, and the host of the PEM-HTTPD server.

For information about modifying the `pg_hba.conf` file, see the *PEM Administrator's Guide* available at:

[https://www.enterprisedb.com/docs](/pem/latest/pem_admin/)

Information about managing authentication is also available in the Postgres core documentation available at:

<https://www.postgresql.org/docs/current/static/auth-pg-hba-conf.html>

**Firewall Restrictions**

Please note that you must adjust your firewall to allow communication between PEM components.

**Supported Locales**

Currently, the PEM server and web interface support a locale of `English(US) en_US` and use of a period (.) as a language separator character. Using an alternate locale, or a separator character other than a period may result in errors.
